fix: I fixed the paths in the css, this should wrap up the path issues I was having.

--- a/css/blogpost.css/blog.css
+++ b/css/blogpost.css/blog.css
@@ -1,6 +1,7 @@
-@import url("/css/blogpost.css/mediaqueries.css");
+@import url("mediaqueries.css");
 body {
     background-color: #fdfdfd;
+    background-color: black;
     top: 0;
     width: 100%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
